crates/cli/tests/snapshots/lib__run_test@poly.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - "\\\\?\\C:\\Users\\creek\\code\\nemo-lang\\crates\\cli\\tests\\run\\poly.nemo"
    - "--output"
    - tests/build/passing/poly.wasm
input_file: crates/cli/tests/run/poly.nemo
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
