crates/cli/tests/snapshots/lib__run_test@return.nemo-2.snap
---
source: crates/cli/tests/lib.rs
info:
  program: deno
  args:
    - run
    - "--allow-read"
    - "../../dev/wasm-runner.ts"
    - tests/build/passing/return.wasm
  env:
    NO_COLOR: "1"
input_file: crates/cli/tests/run/return.nemo
---
success: true
exit_code: 0
----- stdout -----
0

----- stderr -----
