crates/cli/tests/snapshots/lib__run_test@return.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - "\\\\?\\C:\\Users\\creek\\code\\nemo-lang\\crates\\cli\\tests\\run\\return.nemo"
    - "--output"
    - tests/build/passing/return.wasm
input_file: crates/cli/tests/run/return.nemo
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
