crates/cli/tests/snapshots/lib__run_test@structs.nemo-2.snap
---
source: crates/cli/tests/lib.rs
info:
  program: deno
  args:
    - run
    - "--allow-read"
    - "../../dev/wasm-runner.ts"
    - tests/build/structs.wasm
  env:
    NO_COLOR: "1"
input_file: crates/cli/tests/run/structs.nemo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Uncaught (in promise) NotFound: No such file or directory (os error 2): readfile 'tests/build/structs.wasm'
const wasmCode = await Deno.readFile(filePath);
                            ^
    at Object.readFile (ext:deno_fs/30_fs.js:848:24)
    at [FILE_PATH]
