crates/cli/tests/snapshots/lib__run_test@toplevels.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - "\\\\?\\C:\\Users\\creek\\code\\nemo-lang\\crates\\cli\\tests\\run\\toplevels.nemo"
    - "--output"
    - tests/build/passing/toplevels.wasm
input_file: crates/cli/tests/run/toplevels.nemo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[31m[07] Error:[0m Unknown type Particle
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m19 │[0m [38;5;249mf[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249ma[0m[38;5;249md[0m[38;5;249md[0m[38;5;249m_[0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mt[0m[38;5;249mi[0m[38;5;249mc[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249m([0m[38;5;249mp[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0mParticle[38;5;249m)[0m[38;5;249m [0m[38;5;249m{[0m
 [38;5;240m   │[0m                     ────┬───  
 [38;5;240m   │[0m                         ╰───── Unknown type Particle
[38;5;246m────╯[0m

[31m[05] Error:[0m Unknown variable particles
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m20 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249ms[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0mparticles[38;5;249m.[0m[38;5;249mb[0m[38;5;249mu[0m[38;5;249mf[0m[38;5;249mf[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249m[[0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mt[0m[38;5;249mi[0m[38;5;249mc[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249ms[0m[38;5;249m.[0m[38;5;249mw[0m[38;5;249ma[0m[38;5;249mt[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249mm[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mk[0m[38;5;249m][0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249mp[0m[38;5;249m;[0m
 [38;5;240m   │[0m       ────┬────  
 [38;5;240m   │[0m           ╰────── Unknown variable particles
[38;5;246m────╯[0m

[31m[05] Error:[0m Unknown variable particles
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m20 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249ms[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mt[0m[38;5;249mi[0m[38;5;249mc[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249ms[0m[38;5;249m.[0m[38;5;249mb[0m[38;5;249mu[0m[38;5;249mf[0m[38;5;249mf[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249m[[0mparticles[38;5;249m.[0m[38;5;249mw[0m[38;5;249ma[0m[38;5;249mt[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249mm[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mk[0m[38;5;249m][0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249mp[0m[38;5;249m;[0m
 [38;5;240m   │[0m                        ────┬────  
 [38;5;240m   │[0m                            ╰────── Unknown variable particles
[38;5;246m────╯[0m

[31m[05] Error:[0m Unknown variable particles
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m21 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249ms[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0mparticles[38;5;249m.[0m[38;5;249mw[0m[38;5;249ma[0m[38;5;249mt[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249mm[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mk[0m[38;5;249m [0m[38;5;249m=[0m
 [38;5;240m   │[0m       ────┬────  
 [38;5;240m   │[0m           ╰────── Unknown variable particles
[38;5;246m────╯[0m

[31m[05] Error:[0m Unknown variable particles
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m22 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249mi[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m_[0m[38;5;249mr[0m[38;5;249me[0m[38;5;249mm[0m[38;5;249m_[0m[38;5;249ms[0m[38;5;249m([0mparticles[38;5;249m.[0m[38;5;249mw[0m[38;5;249ma[0m[38;5;249mt[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249mm[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mk[0m[38;5;249m [0m[38;5;249m+[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mr[0m[38;5;249ma[0m[38;5;249my[0m[38;5;249m_[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mn[0m[38;5;249m([0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mt[0m[38;5;249mi[0m[38;5;249mc[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249ms[0m[38;5;249m.[0m[38;5;249mb[0m[38;5;249mu[0m[38;5;249mf[0m[38;5;249mf[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249m)[0m[38;5;249m)[0m
 [38;5;240m   │[0m               ────┬────  
 [38;5;240m   │[0m                   ╰────── Unknown variable particles
[38;5;246m────╯[0m

[31m[22] Error:[0m Mismatched type arg count. Expected 1 argument, but got 0
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m22 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249mi[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m_[0m[38;5;249mr[0m[38;5;249me[0m[38;5;249mm[0m[38;5;249m_[0m[38;5;249ms[0m[38;5;249m([0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mt[0m[38;5;249mi[0m[38;5;249mc[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249ms[0m[38;5;249m.[0m[38;5;249mw[0m[38;5;249ma[0m[38;5;249mt[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249mm[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mk[0m[38;5;249m [0m[38;5;249m+[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m,[0m[38;5;249m [0marray_len[38;5;249m([0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mt[0m[38;5;249mi[0m[38;5;249mc[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249ms[0m[38;5;249m.[0m[38;5;249mb[0m[38;5;249mu[0m[38;5;249mf[0m[38;5;249mf[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249m)[0m[38;5;249m)[0m
 [38;5;240m   │[0m                                        ────┬────  
 [38;5;240m   │[0m                                            ╰────── Mismatched type arg count. Expected 1 argument, but got 0
[38;5;246m────╯[0m

Error: "Compiling failed with 6 errors"
